feat: accounts for multi-platform fixes and moar linking (#76)
* fix: accounts for multi-platform fixes and moar linking

* test

* forgot to limit it

* import

* multiplatform

* one less guava